# SEO_AI_Agent

./: .gitignore  AI_SEO_BACKEND_SPEC_V1.txt  README.md  pyproject.toml  wrangler.contact-relay.toml  wrangler.toml
cloudflare-agents-worker/: .dev.vars.example  README.md  package.json  wrangler.jsonc
docs/: TRAFFIC_ORACLE_MVP.md  apify_actor_X2JFXEVBxFPnnHs7g_supremexdetail.com.json  openapi.yaml  web-secrets-task-marketplace-contract.md  wp-plugin-integration-guide.md
migrations/: 0002_serp.sql  0003_device_policy.sql  0003_keyword_intent.sql  0003_speed.sql  0003_worker_endpoints.sql  0004_pagespeed_monitoring.sql  0005_wp_plugin_profiles.sql  0006_proxy_pool.sql  0007_serp_watchlist.sql  0008_jobs_artifacts.sql  0009_serp_canonicalization.sql  0010_step1_keyword_research.sql  0011_step2_daily_harvest.sql  0012_step2_cache_and_provider.sql  0013_step2_baseline_delta.sql  0014_step3_local_service_engine.sql  0015_unified_d1_step2_step3.sql  0016_human_verified_task_marketplace.sql  0017_moz_snapshots_and_budgeting.sql  0018_moz_profiles_and_usage.sql  0019_site_provider_profiles.sql  0020_serp_runs_fallback_reason.sql  0021_moz_snapshot_geo_usage_fix.sql  0022_keywords_serp_inspiration_hardening.sql  0023_device_policy_conversion_priors_fixes.sql  0024_memory_layer_semantic_store.sql  0025_portal_plans_and_subscriptions.sql  0026_memory_embedding_dims.sql  0027_initial_apify_actor_bootstrap.sql  0028_cloudflare_sso_onboarding.sql  0029_demo_site_builds.sql
scripts/: backfill_step3_tasks_to_tasks.py  dev_pipeline_run.sh  repo_summarizer_with_memory.py  (+3 more)
(+48 files in other folders)
